# microservice-test

./: README.md  docker-compose.yml
python-service/: .gitignore  Dockerfile  pyproject.toml  sql_app.db
python-service/alembic/: env.py
python-service/alembic/versions/: dcead6181df9_initial.py
python-service/app/: main.py  utils.py
python-service/app/core/: config.py
python-service/app/crud/: base.py
python-service/app/db/: base.py
python-service/app/models/: base.py
python-service/app/schemas/: base.py
python-service/app/tests/: test_main.py  test_utils.py
rust-service/: Cargo.toml  Dockerfile  main.rs
