[tool.poetry]
name = "python-service"
version = "0.1.0"
description = ""
authors = ["Luca Albuquerque <lucalacerda1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.0"
uvicorn = "^0.11.6"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"
python-dotenv = "^0.14.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylama = "^7.7.1"
pylint = "^2.5.3"
flake8 = "^3.8.3"
pylint-django = "^2.1.0"
bandit = "^1.6.2"
ipdb = "^0.13.3"
pytest = "^5.4.3"
pytest-mock = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
