[package]
name = "rust-service"
version = "0.1.0"
authors = ["Luca Albuquerque <lucalacerda1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
serde = "1.0"
rand = "0.7.3"

[[bin]]
name = "rust-service"
path = "main.rs"
